k8s/airbytes/nginx-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-orbit-ingress
  namespace: airbyte
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-issuer"
  #   acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: "ambassador"
  # tls:
  # - hosts:
  #   - airbyte-orbit.fannylimin.my.id
  #   secretName: airbyte-orbit-certificate
  rules:
  - host: airbyte-orbit.fannylimin.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airbyte-airbyte-webapp-svc
            port:
              number: 80
